<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_recognize"
                android:orderInCategory="1"
                android:icon="@drawable/microphone_off"
                android:title="@string/recognizer" />
        <item
                android:id="@+id/nav_lib"
                android:orderInCategory="2"
                android:icon="@drawable/video_library"
                android:title="@string/library" />
        <item
                android:id="@+id/nav_settings"
                android:orderInCategory="3"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
        <item
                android:id="@+id/nav_about"
                android:orderInCategory="4"
                android:icon="@drawable/info"
                android:title="@string/about" />
    </group>
</menu>