<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:asp="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            app:key="recognition_category"
            app:title="@string/recognition_category">
        <ListPreference
                android:key="mvv_gestures_speed"
                android:summary="@string/gestures_speed_summary"
                android:title="@string/gestures_speed"
                android:entries="@array/gestures_speed_names"
                android:entryValues="@array/gestures_speed_values"
                android:defaultValue="@string/gestures_speed_default_value" />
        <!--        TODO: reuse-->
        <!--        <ListPreference-->
        <!--                android:key="rec_grammar_name"-->
        <!--                android:summary="@string/grammar_name_summary"-->
        <!--                android:title="@string/grammar_name"-->
        <!--                android:entries="@array/grammar_name_names"-->
        <!--                android:entryValues="@array/grammar_name_values"-->
        <!--                android:defaultValue="@string/grammar_name_default_value"/>-->
    </PreferenceCategory>
    <!--    <PreferenceCategory-->
    <!--            app:key="debug_category"-->
    <!--            app:title="@string/debug_category">-->
    <!--    <CheckBoxPreference-->
    <!--            android:key="rec_save_logs"-->
    <!--            android:summary="@string/save_logs_summary"-->
    <!--            android:title="@string/save_logs"-->
    <!--            android:defaultValue="false"/>-->
    <!--    </PreferenceCategory>-->
</PreferenceScreen>